--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^12.10.0",
     "framer-motion": "^12.34.3",
+    "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
     "next": "14.2.35",
     "react": "^18",
